# create-ekka-desktop-app

./: .gitignore  README.md  package.json
template/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
template/src/: vite-env.d.ts
template/src-tauri/: Cargo.toml
template/src-tauri/crates/ekka-desktop-core/: Cargo.toml
template/src-tauri/crates/ekka-desktop-core/src/: main.rs
template/src-tauri/src/: commands.rs  engine_process.rs  grants.rs  main.rs  node_runner.rs  state.rs  well_known.rs
template/src-tauri/src/ops/: auth.rs
template/src/demo/: DemoApp.tsx
template/src/demo/components/: FatalErrorScreen.tsx
template/src/demo/layout/: Shell.tsx  Sidebar.tsx
template/src/demo/pages/: AsyncWork.tsx  DocGenPage.tsx  ExecutionPlansPage.tsx  ExecutionRunDetailPage.tsx  LoginPage.tsx  RunnerPage.tsx  SettingsPage.tsx  StatefulData.tsx
template/src/ekka/: constants.ts  errors.ts  index.ts  types.ts
template/src/ekka/__tests__/: demo-backend.test.ts  runtime.test.ts
template/src/ekka/api/: db.ts  index.ts  pipeline.ts  queue.ts  vault.ts
template/src/ekka/backend/: demo.ts  engine.ts  index.ts  interface.ts
template/src/ekka/core/: index.ts  runtime.ts
template/src/ekka/internal/: backend.ts
template/src/ekka/ops/: admin.ts  executionRuns.ts  index.ts  runner.ts  workflowRuns.ts
