[package]
name = "ekka-desktop-app"
version = "0.2.0"
description = "EKKA Desktop Application"
authors = ["EKKA"]
edition = "2021"

# Prevent inheriting parent workspace
[workspace]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
